fix modal styling on smaller screens

--- a/index.css
+++ b/index.css
@@ -84,8 +84,8 @@ button {
   margin: 15% auto;
   padding: 20px;
   border: 1px solid #888;
-  width: 40%;
-  height: 40%;
+  width: 60%;
+  height: 50%;
 }
 
 .close {
